--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -12,7 +12,7 @@
         <div class="admin-bar">
             <strong>Admin Controls</strong>
             <div style="margin-top: 0.5em;">
-                <span style="opacity: 0.7;">Create:</span> <a href="/create/t">Tournament</a>
+                <span style="opacity: 0.7;">Create:</span> <a href="/create/tournament">Tournament</a>
             </div>
             <div style="margin-top: 0.3em;">
                 <span style="opacity: 0.7;">Manage:</span> <a href="/manage/site">Site</a> 
