--- a/assets/templates/manage-structure.html.tmpl
+++ b/assets/templates/manage-structure.html.tmpl
@@ -34,6 +34,7 @@
                     </td>
                     <td>
                         <a href="/manage/structure/{{ $s.ID }}/edit">Edit</a>
+                        <a href="/create/structure?template={{ $s.ID }}">Copy</a>
                         <a href="#" style="color:#f88;" onclick="showDeleteModal('{{ $s.Name }}', {{ $s.ID }})">Delete</a>
                     </td>
                 </tr>
