Update prize pool from model.

--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -223,7 +223,7 @@
                 <table align="center" width="100%">
                   <!-- <tr> <td class="rr-label"> PRIZE POOL </td> </tr> -->
                   <tr>
-                    <td class="prize-pool">
+                    <td class="prize-pool" id="prize-pool">
                       {{ .Tournament.State.PrizePool }}
                     </td>
                 </table>
